2000-06-05  Dave Peticolas  <dave@krondo.com>

	* configure.in: changed '! test' to 'test !'.

	* src/engine: removed *Consolidate* functions. These were cruft
	used by the old QIFIO routines.

2000-06-04  Dave Peticolas  <dave@krondo.com>

	* src/engine/util.c: add log level modification functions.

	* src/scm/command-line.scm: add a --loglevel argument to set the
	logging level.

2000-06-04  Rob Browning  <rlb@cs.utexas.edu>

	* */Makefile.am and others: fix up make dist to build a full-blown
	tarfile.

2000-06-04  Dave Peticolas  <dave@krondo.com>

	* src/engine/Session.c (xaccSessionSave): record file writing errors
	in the session error code.

	* src/FileDialog.c (gncFileSave): print an error message in a dialog
	on file-writing errors.

	* src/register/quickfillcell.c (quick_modify): before updating the
	original copy, make sure it's still the same as the old value,
	modulo case.

2000-06-03  Dave Peticolas  <dave@krondo.com>

	* src/engine/FileIO.c: John Goerzen's patch for 64-bit
	architectures.

2000-06-02  Dave Peticolas  <dave@krondo.com>

	* src/register/splitreg.c: added functions for getting cell types
	and getting the locations for cell types.

	* src/SplitLedger.c: add functionality for auto-completion

2000-06-02  Rob Browning  <rlb@cs.utexas.edu>

	* quite a few bugfixes to the automake stuff.

	* guid-md5.* -> md5.* - Dave liked this better, and I did too.

	* src/register/gnome/* - restored ... for now.

2000-06-01  Rob Browning  <rlb@cs.utexas.edu>

	* README: many mods to accomodate new changes, but still unfinished.

	* configure.in: --with-opt-style-install changed to
	--enable-opt-style-install

2000-05-31  Rob Browning  <rlb@cs.utexas.edu>

	* Giant automake switchover.
	doc/html/*/pix/ -> doc/html/*/image/
	intl/* - new directory/contents (filled via gettextize).
	src/doc - new directory to collect src docs.
	src/experimental - new directory.
	src/gg -> src/experimental/gg
	src/cbb -> src/experimental/cbb